Fixed scss for species map view on mobile popover

--- a/app/assets/stylesheets/map.scss
+++ b/app/assets/stylesheets/map.scss
@@ -554,7 +554,7 @@ html {
             color: #999;
           }
 
-          .mobile {
+          .map-view {
             margin-left: 10px;
           }
 
